2A/05_Projet_GL/src/test/deca/context/invalid/complet/55_new_int.deca
// Description :
//   new avec int 
// Resultats :
//    ligne 9 : Le type attendu doit être un type de classe
// Historique :
//  cree le 16/01/2024

{
    int a = new int();
}